# plutus

./: cabal.project  ci.nix  default.nix  flake.nix  stack.yaml
index-envs/: index-envs.cabal
nix/: docs.nix
nix/lib/: ci.nix
nix/pkgs/: default.nix
nix/pkgs/haskell/: haskell.nix
nix/pkgs/haskell/materialized-darwin/: default.nix
nix/pkgs/haskell/materialized-linux/: default.nix
nix/pkgs/haskell/materialized-linux/.plan.nix/: plutus-tx-plugin.nix
nix/pkgs/haskell/materialized-windows/: default.nix
plutus-benchmark/: plutus-benchmark.cabal
plutus-core/: plutus-core.cabal
plutus-core-testlib/: plutus-core-testlib.cabal
plutus-core/cost-model/budgeting-bench/: Bench.hs
plutus-core/generators/PlutusCore/Generators/NEAT/: Term.hs
plutus-core/plutus-core/src/PlutusCore/Default/: Builtins.hs
plutus-core/untyped-plutus-core/test/Evaluation/Builtins/: Definition.hs
plutus-errors/: plutus-errors.cabal
plutus-metatheory/: plutus-metatheory.cabal
plutus-metatheory/src/: Algorithmic.lagda  Builtin.lagda.md  Declarative.lagda.md  Raw.lagda  Scoped.lagda
plutus-metatheory/src/Algorithmic/: CC.lagda.md  CEKV.lagda.md  Completeness.lagda  Reduction.lagda  ReductionEC.lagda.md  Soundness.lagda
plutus-metatheory/src/Algorithmic/Erasure/: Reduction.lagda
plutus-metatheory/src/Builtin/: Signature.lagda.md
plutus-metatheory/src/Scoped/: Extrication.lagda  Reduction.lagda
plutus-metatheory/src/Untyped/: Reduction.lagda.md
plutus-pab/src/Plutus/PAB/Webserver/: Handler.hs
plutus-tx/: plutus-tx.cabal
plutus-tx-plugin/: plutus-tx-plugin.cabal
plutus-tx-plugin/src/PlutusTx/Compiler/: Builtins.hs
plutus-tx-plugin/test/Plugin/Errors/: Spec.hs  literalAppendBs.plc.golden
plutus-tx-plugin/test/Plugin/Primitives/: Spec.hs  deconstructorData2.plc.golden
plutus-tx-testlib/: plutus-tx-testlib.cabal
plutus-tx/src/PlutusTx/: Builtins.hs  Prelude.hs
plutus-tx/src/PlutusTx/Builtins/: Internal.hs
plutus-use-cases/: default.nix
plutus-use-cases/test/Spec/: gameStateMachine.pir  governance.pir  multisigStateMachine.pir  renderGuess.txt
