cabal-version:      3.0
name:               index-envs
version:            1.0.0.0
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:         michael.peyton-jones@iohk.io
author:             Plutus Core Team
synopsis:           Language library for Plutus Core
description:        Pretty-printer, parser, and typechecker for Plutus Core.
category:           Language, Plutus
build-type:         Simple
extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies

library
  import:           lang
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Data.DeBruijnEnv
    Data.RandomAccessList.SkewBinary

  build-depends:
    , base
    , containers
    , ral         ==0.1

-- broken for ral-0.2 conflicts with cardano-binary:recursion-schemes
benchmark index-envs-bench
  import:           lang
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , base
    , criterion   >=1.5.9.0
    , index-envs
    , ral         ==0.1
    , random      >=1.2.0

-- broken for ral-0.2 conflicts with cardano-binary:recursion-schemes
test-suite index-envs-test
  import:           lang
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  main-is:          TestRAList.hs
  build-depends:
    , base
    , index-envs
    , tasty
    , tasty-hunit
    , tasty-quickcheck
