cabal-version:      3.0
name:               plutus-core-testlib
version:            1.0.0.0
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:         michael.peyton-jones@iohk.io
author:             Plutus Core Team
synopsis:           Language library for Plutus Core
description:        Pretty-printer, parser, and typechecker for Plutus Core.
category:           Language, Plutus
build-type:         Simple
extra-doc-files:    README.md
extra-source-files:
  plutus-core/test/CostModelInterface/defaultCostModelParams.json

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies

library
  import:          lang
  hs-source-dirs:  testlib
  exposed-modules:
    PlutusCore.Generators
    PlutusCore.Generators.AST
    PlutusCore.Generators.Interesting
    PlutusCore.Generators.NEAT.Common
    PlutusCore.Generators.NEAT.Spec
    PlutusCore.Generators.NEAT.Term
    PlutusCore.Generators.NEAT.Type
    PlutusCore.Generators.Test
    PlutusCore.Test
    PlutusIR.Generators.AST
    PlutusIR.Test
    Test.Tasty.Extras

  other-modules:
    PlutusCore.Generators.Internal.Denotation
    PlutusCore.Generators.Internal.Dependent
    PlutusCore.Generators.Internal.Entity
    PlutusCore.Generators.Internal.TypedBuiltinGen
    PlutusCore.Generators.Internal.TypeEvalCheck
    PlutusCore.Generators.Internal.Utils

  build-depends:
    , base                        >=4.9     && <5
    , bifunctors
    , bytestring
    , containers
    , dependent-map               >=0.4.0.0
    , filepath
    , ghc-prim
    , hedgehog                    >=1.0
    , integer-gmp
    , lazy-search
    , lens
    , megaparsec
    , mmorph
    , mtl
    , plutus-core
    , prettyprinter               >=1.1.0.1
    , prettyprinter-configurable
    , size-based
    , some                        <1.0.3
    , Stream
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , text
    , transformers

test-suite plutus-core-test
  import:           lang
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   plutus-core/test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Check.Spec
    CostModelInterface.Spec
    Evaluation.Machines
    Evaluation.Spec
    Names.Spec
    Normalization.Check
    Normalization.Type
    Pretty.Readable
    TypeSynthesis.Spec

  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , filepath
    , flat
    , hedgehog
    , mmorph
    , mtl
    , plutus-core
    , plutus-core-testlib
    , prettyprinter
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , template-haskell
    , text
    , th-lift-instances
    , th-utilities
    , transformers

test-suite plutus-ir-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: plutus-ir/test
  other-modules:
    NamesSpec
    ParserSpec
    TransformSpec
    TypeSpec

  build-depends:
    , base                 >=4.9 && <5
    , flat
    , hedgehog
    , megaparsec
    , plutus-core
    , plutus-core-testlib
    , tasty
    , tasty-hedgehog
    , text

test-suite untyped-plutus-core-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: untyped-plutus-core/test
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    DeBruijn.Common
    DeBruijn.Scope
    DeBruijn.Spec
    DeBruijn.UnDeBruijnify
    Evaluation.Builtins
    Evaluation.Builtins.Coherence
    Evaluation.Builtins.Common
    Evaluation.Builtins.Definition
    Evaluation.Builtins.MakeRead
    Evaluation.Builtins.SECP256k1
    Evaluation.FreeVars
    Evaluation.Golden
    Evaluation.Machines
    Transform.Simplify

  build-depends:
    , base                  >=4.9 && <5
    , bytestring
    , cardano-crypto-class
    , hedgehog
    , index-envs
    , lens
    , mtl
    , plutus-core
    , plutus-core-testlib
    , pretty-show
    , prettyprinter
    , secp256k1-haskell
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , text

executable plc
  import:         lang
  main-is:        plc/Main.hs
  hs-source-dirs: executables
  other-modules:
    Common
    Parsers

  build-depends:
    , aeson
    , base                  <5
    , bytestring
    , deepseq
    , flat
    , lens
    , megaparsec
    , monoidal-containers
    , mtl
    , optparse-applicative
    , plutus-core
    , plutus-core-testlib
    , prettyprinter
    , text
    , transformers

executable uplc
  import:         lang
  main-is:        uplc/Main.hs
  hs-source-dirs: executables
  other-modules:
    Common
    Parsers

  build-depends:
    , aeson
    , base                  <5
    , bytestring
    , deepseq
    , flat
    , lens
    , megaparsec
    , monoidal-containers
    , mtl
    , optparse-applicative
    , plutus-core
    , plutus-core-testlib
    , prettyprinter
    , split
    , text
    , transformers

executable pir
  import:         lang
  main-is:        pir/Main.hs
  hs-source-dirs: executables
  other-modules:
    Common
    Parsers

  build-depends:
    , aeson
    , base                  <5
    , bytestring
    , cassava
    , containers
    , deepseq
    , flat
    , lens
    , megaparsec
    , monoidal-containers
    , mtl
    , optparse-applicative
    , plutus-core
    , plutus-core-testlib
    , prettyprinter
    , text
    , transformers

executable traceToStacks
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: executables/traceToStacks
  other-modules:  Common
  build-depends:
    , base                  >=4.9 && <5
    , bytestring
    , cassava
    , integer-gmp
    , optparse-applicative
    , text
    , vector

-- Tests for functions called by @traceToStacks@.
test-suite traceToStacks-test
  import:           lang
  type:             exitcode-stdio-1.0
  hs-source-dirs:   executables/traceToStacks
  default-language: Haskell2010
  main-is:          TestGetStacks.hs
  other-modules:    Common
  build-depends:
    , base
    , bytestring
    , cassava
    , tasty
    , tasty-hunit
    , text
    , vector
